# swagger.json
@@ -6,7 +6,7 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"IWireguardPeerStatus": {
+			"IWireguardPeerStatusDto": {
 				"properties": {
 					"publicKey": {
 						"type": "string"
@@ -541,32 +541,11 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Pick_TProfileCreateModel.Exclude_keyofTProfileCreateModel.id-or-username-or-passwordHash__": {
-				"properties": {
-					"firstName": {
-						"type": "string"
-					},
-					"lastName": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"phone": {
-						"type": "string"
-					}
-				},
-				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"ISignUpRequestDto": {
+			"ISignUpRequest": {
 				"properties": {
 					"username": {
 						"type": "string"
 					},
-					"password": {
-						"type": "string"
-					},
 					"firstName": {
 						"type": "string"
 					},
@@ -578,16 +557,18 @@
 					},
 					"phone": {
 						"type": "string"
+					},
+					"password": {
+						"type": "string"
 					}
 				},
 				"required": [
-					"username",
 					"password"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
-			"ISignInRequestDto": {
+			"ISignInRequest": {
 				"properties": {
 					"username": {
 						"type": "string"
@@ -698,7 +679,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/IWireguardPeerStatus"
+									"$ref": "#/components/schemas/IWireguardPeerStatusDto"
 								}
 							}
 						}
@@ -1291,7 +1272,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/ISignUpRequestDto",
+								"$ref": "#/components/schemas/ISignUpRequest",
 								"description": "Body param"
 							}
 						}
@@ -1324,7 +1305,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/ISignInRequestDto"
+								"$ref": "#/components/schemas/ISignInRequest"
 							}
 						}
 					}
